changed order of board and canvas

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
           </div>
         </nav>
+        <img id="board" src="images/my-vacation.jpg" />
         <canvas id="canvas">
           Canvas is not supported by your browser
         </canvas>
-        <img id="board" src="images/board.jpg" />
       </div>
     </div>
     <div id="dice">
