added more board games

--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
-            <option value="my-vacation">My Vacation</option>
-            <option value="verbs">Verbs</option>
-            <option value="adjectives">Adjectives</option>
-            <option value="sports">Sports</option>
+            <option value="animals-pictures">Animals (Pictures)</option>
+            <option value="animals-words">Animals (Words)</option>
+            <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
+            <option value="color-shapes-words">Colors & Shapes (Words)</option>
+            <option value="numbers-pictures">Numbers (Pictures)</option>
+            <option value="numbers-words">Numbers (Words)</option>
+            <option value="occupations-pictures">Occupations (Pictures)</option>
+            <option value="occupations-words">Occupations (Words)</option>
+            <option value="food-pictures">Food (Pictures)</option>
+            <option value="food-words">Food (Words)</option>
+            <option value="adjectives-1-pictures">Adjectives 1 (Pictures)</option>
+            <option value="adjectives-1-words">Adjectives 1 (Words)</option>
+            <option value="nature-pictures">Nature (Pictures)</option>
+            <option value="nature-words">Nature (Words)</option>
+            <option value="verbs-1-pictures">Verbs 1 (Pictures)</option>
+            <option value="verbs-1-words">Verbs 1 (Words)</option>
+            <option value="adjectives-2-pictures">Adjectives 2 (Pictures)</option>
+            <option value="adjectives-2-words">Adjectives 2 (Words)</option>
+
+            <option value="school-pictures">School (Pictures)</option>
+            <option value="school-words">School (Words)</option> 
+
+            <option value="house-rooms-pictures">House/Rooms (Pictures)</option>
+            <option value="house-rooms-words">House/Rooms (Words)</option> 
+
+            <option value="sports-pictures">Sports (Pictures)</option>
+            <option value="sports-words">Sports (Words)</option> 
+
             <option value="lg6p70-71">Let's Go 6: p70-71</option>
           </select>
           <svg class="icon" id="dice-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -36,7 +60,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/my-vacation.jpg" />
+        <img id="board" src="images/animals-pictures.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
