--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
             <option value="verbs-1-words">Verbs 1 (Words)</option>
             <option value="adjectives-2-pictures">Adjectives 2 (Pictures)</option>
             <option value="adjectives-2-words">Adjectives 2 (Words)</option>
-
+            <option value="furniture-pictures">Furniture (Pictures)</option>
+            <option value="furniture-words">Furniture (Words)</option>
             <option value="school-pictures">School (Pictures)</option>
             <option value="school-words">School (Words)</option> 
-
+            <option value="family-pictures">Family (Pictures)</option>
+            <option value="family-words">Family (Words)</option> 
             <option value="house-rooms-pictures">House/Rooms (Pictures)</option>
             <option value="house-rooms-words">House/Rooms (Words)</option> 
 
+            <option value="symptoms-pictures">Symptoms (Pictures)</option>
+            <option value="symptoms-words">Symptoms (Words)</option> 
             <option value="sports-pictures">Sports (Pictures)</option>
             <option value="sports-words">Sports (Words)</option> 
 
