added what did emily do

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <option value="sports-pictures">Sports (Pictures)</option>
             <option value="sports-words">Sports (Words)</option> 
 
+            <option value="what-did-emily-do">What Did Emily Do?</option>
             <option value="lg6p70-71">Let's Go 6: p70-71</option>
           </select>
           <svg class="icon" id="dice-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
