new family game sheet added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
+            <option value="family-game-sheet">Family Game Sheet</option>
+            <option value="what-did-emily-do">What Did Emily Do?</option>ç
+            <option value="lg6p70-71">Let's Go 6: p70-71</option>
+
             <option value="animals-pictures">Animals (Pictures)</option>
             <option value="animals-words">Animals (Words)</option>
             <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
@@ -42,8 +46,6 @@
             <option value="sports-pictures">Sports (Pictures)</option>
             <option value="sports-words">Sports (Words)</option> 
 
-            <option value="what-did-emily-do">What Did Emily Do?</option>
-            <option value="lg6p70-71">Let's Go 6: p70-71</option>
           </select>
           <svg class="icon" id="dice-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
             <path d="M88.89,0H11.11A11.14,11.14,0,0,0,0,11.11V88.89A11.14,11.14,0,0,0,11.11,100H88.89A11.14,11.14,0,0,0,100,88.89V11.11A11.14,11.14,0,0,0,88.89,0ZM25,83.33A8.33,8.33,0,1,1,33.33,75,8.32,8.32,0,0,1,25,83.33Zm0-50A8.33,8.33,0,1,1,33.33,25,8.32,8.32,0,0,1,25,33.33Zm25,25A8.33,8.33,0,1,1,58.33,50,8.32,8.32,0,0,1,50,58.33Zm25,25A8.33,8.33,0,1,1,83.33,75,8.32,8.32,0,0,1,75,83.33Zm0-50A8.33,8.33,0,1,1,83.33,25,8.32,8.32,0,0,1,75,33.33Z"/>
