changed the default game

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/animals-pictures.jpg" />
+        <img id="board" src="images/family-game-sheet.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
