--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
+            <option value="sounds-fun">Sounds Fun!: p100-101</option>
             <option value="family-game-sheet">Family Game Sheet</option>
-            <option value="what-did-emily-do">What Did Emily Do?</option>ç
+            <option value="what-did-emily-do">What Did Emily Do?</option>
             <option value="lg6p70-71">Let's Go 6: p70-71</option>
+            <option value="my-vacation">My Vacation</option>
 
             <option value="animals-pictures">Animals (Pictures)</option>
             <option value="animals-words">Animals (Words)</option>
@@ -67,7 +69,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/family-game-sheet.jpg" />
+        <img id="board" src="images/sounds-fun.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
