new Theyre ing / Shes ing game added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
           <select name="board-game" id="game-select">
             <option value="sounds-fun">Sounds Fun!: p100-101</option>
+            <option value="theyre-ing-shes-ing">They're ~ing / She's ~ing</option>
             <option value="family-game-sheet">Family Game Sheet</option>
             <option value="what-did-emily-do">What Did Emily Do?</option>
             <option value="lg6p70-71">Let's Go 6: p70-71</option>
