--- a/index.html
+++ b/index.html
@@ -10,44 +10,55 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
-            <option value="sounds-fun">Sounds Fun!: p100-101</option>
-            <option value="theyre-ing-shes-ing">They're ~ing / She's ~ing</option>
-            <option value="family-game-sheet">Family Game Sheet</option>
-            <option value="what-did-emily-do">What Did Emily Do?</option>
-            <option value="lg6p70-71">Let's Go 6: p70-71</option>
-            <option value="my-vacation">My Vacation</option>
+            <optgroup label="Week 1~4">
+              <option value="school-pictures">School Supplies (Pictures)</option>
+              <option value="school-words">School Supplies (Words)</option> 
+              <option value="weather-pictures">Weather (Pictures)</option>
+              <option value="weather-words">Weather (Words)</option>
+              <option value="furniture-pictures">Household Objects (Pictures)</option>
+              <option value="furniture-words">Household Objects (Words)</option>
+              <option value="what-did-emily-do">What Did Emily Do?</option>
+            </optgroup>
+            
+            <optgroup label="Honeycomb Board Games">
+              <option value="animals-pictures">Animals (Pictures)</option>
+              <option value="animals-words">Animals (Words)</option>
+              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
+              <option value="color-shapes-words">Colors & Shapes (Words)</option>
+              <option value="food-pictures">Food (Pictures)</option>
+              <option value="food-words">Food (Words)</option>
+              <option value="house-rooms-pictures">House/Rooms (Pictures)</option>
+              <option value="house-rooms-words">House/Rooms (Words)</option> 
+              <option value="nature-pictures">Nature (Pictures)</option>
+              <option value="nature-words">Nature (Words)</option>
+              <option value="occupations-pictures">Occupations (Pictures)</option>
+              <option value="occupations-words">Occupations (Words)</option>
+              <option value="symptoms-pictures">Symptoms (Pictures)</option>
+              <option value="symptoms-words">Symptoms (Words)</option> 
+              <option value="verbs-1-pictures">Verbs 1 (Pictures)</option>
+              <option value="verbs-1-words">Verbs 1 (Words)</option>
+            </optgroup>
+            
+            <optgroup label="Space Evaders">
+              <option value="adjectives-1-pictures">Adjectives 1 (Pictures)</option>
+              <option value="adjectives-1-words">Adjectives 1 (Words)</option>
+              <option value="adjectives-2-pictures">Adjectives 2 (Pictures)</option>
+              <option value="adjectives-2-words">Adjectives 2 (Words)</option>
+              <option value="family-pictures">Family (Pictures)</option>
+              <option value="family-words">Family (Words)</option> 
+              <option value="numbers-pictures">Numbers (Pictures)</option>
+              <option value="numbers-words">Numbers (Words)</option>
+              <option value="sports-pictures">Sports (Pictures)</option>
+              <option value="sports-words">Sports (Words)</option> 
+            </optgroup>
 
-            <option value="animals-pictures">Animals (Pictures)</option>
-            <option value="animals-words">Animals (Words)</option>
-            <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
-            <option value="color-shapes-words">Colors & Shapes (Words)</option>
-            <option value="numbers-pictures">Numbers (Pictures)</option>
-            <option value="numbers-words">Numbers (Words)</option>
-            <option value="occupations-pictures">Occupations (Pictures)</option>
-            <option value="occupations-words">Occupations (Words)</option>
-            <option value="food-pictures">Food (Pictures)</option>
-            <option value="food-words">Food (Words)</option>
-            <option value="adjectives-1-pictures">Adjectives 1 (Pictures)</option>
-            <option value="adjectives-1-words">Adjectives 1 (Words)</option>
-            <option value="nature-pictures">Nature (Pictures)</option>
-            <option value="nature-words">Nature (Words)</option>
-            <option value="verbs-1-pictures">Verbs 1 (Pictures)</option>
-            <option value="verbs-1-words">Verbs 1 (Words)</option>
-            <option value="adjectives-2-pictures">Adjectives 2 (Pictures)</option>
-            <option value="adjectives-2-words">Adjectives 2 (Words)</option>
-            <option value="furniture-pictures">Furniture (Pictures)</option>
-            <option value="furniture-words">Furniture (Words)</option>
-            <option value="school-pictures">School (Pictures)</option>
-            <option value="school-words">School (Words)</option> 
-            <option value="family-pictures">Family (Pictures)</option>
-            <option value="family-words">Family (Words)</option> 
-            <option value="house-rooms-pictures">House/Rooms (Pictures)</option>
-            <option value="house-rooms-words">House/Rooms (Words)</option> 
-
-            <option value="symptoms-pictures">Symptoms (Pictures)</option>
-            <option value="symptoms-words">Symptoms (Words)</option> 
-            <option value="sports-pictures">Sports (Pictures)</option>
-            <option value="sports-words">Sports (Words)</option> 
+            <optgroup label="Miscellaneous">
+              <option value="sounds-fun">Sounds Fun!: p100-101</option>
+              <option value="theyre-ing-shes-ing">They're ~ing / She's ~ing</option>
+              <option value="family-game-sheet">Family Game Sheet</option>
+              <option value="lg6p70-71">Let's Go 6: p70-71</option>
+              <option value="my-vacation">My Vacation</option>
+            </optgroup>
 
           </select>
           <svg class="icon" id="dice-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -70,7 +81,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/sounds-fun.jpg" />
+        <img id="board" src="images/school-pictures.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
