Add So and Because board game

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               <option value="family-game-sheet">Family Game Sheet</option>
               <option value="lg6p70-71">Let's Go 6: p70-71</option>
               <option value="my-vacation">My Vacation</option>
+              <option value="so-and-because">So and Because</option>
             </optgroup>
 
           </select>
