Add Future With Going To Game

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
               <option value="lg6p70-71">Let's Go 6: p70-71</option>
               <option value="my-vacation">My Vacation</option>
               <option value="so-and-because">So and Because</option>
+              <option value="future-with-going-to">Future With Going To</option>
+
             </optgroup>
 
           </select>
