Reorder games for Week 5~7.

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
-            <optgroup label="Week 1~4">
-              <option value="school-pictures">School Supplies (Pictures)</option>
-              <option value="school-words">School Supplies (Words)</option> 
+            <optgroup label="Week 5~7">
+              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
+              <option value="color-shapes-words">Colors & Shapes (Words)</option>
+              <option value="nature-pictures">Nature (Pictures)</option>
+              <option value="nature-words">Nature (Words)</option>
               <option value="weather-pictures">Weather (Pictures)</option>
               <option value="weather-words">Weather (Words)</option>
-              <option value="furniture-pictures">Household Objects (Pictures)</option>
-              <option value="furniture-words">Household Objects (Words)</option>
-              <option value="what-did-emily-do">What Did Emily Do?</option>
+              <option value="symptoms-pictures">Injuries & Illnesses (Pictures)</option>
+              <option value="symptoms-words">Injuries & Illnesses (Words)</option> 
+              <option value="so-and-because">So and Because</option>
             </optgroup>
             
             <optgroup label="Honeycomb Board Games">
               <option value="animals-pictures">Animals (Pictures)</option>
               <option value="animals-words">Animals (Words)</option>
-              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
-              <option value="color-shapes-words">Colors & Shapes (Words)</option>
               <option value="food-pictures">Food (Pictures)</option>
               <option value="food-words">Food (Words)</option>
+              <option value="furniture-pictures">Household Objects (Pictures)</option>
+              <option value="furniture-words">Household Objects (Words)</option>
               <option value="house-rooms-pictures">House/Rooms (Pictures)</option>
               <option value="house-rooms-words">House/Rooms (Words)</option> 
-              <option value="nature-pictures">Nature (Pictures)</option>
-              <option value="nature-words">Nature (Words)</option>
               <option value="occupations-pictures">Occupations (Pictures)</option>
               <option value="occupations-words">Occupations (Words)</option>
-              <option value="symptoms-pictures">Symptoms (Pictures)</option>
-              <option value="symptoms-words">Symptoms (Words)</option> 
+              <option value="school-pictures">School Supplies (Pictures)</option>
+              <option value="school-words">School Supplies (Words)</option> 
               <option value="verbs-1-pictures">Verbs 1 (Pictures)</option>
               <option value="verbs-1-words">Verbs 1 (Words)</option>
             </optgroup>
@@ -51,16 +51,15 @@
               <option value="sports-pictures">Sports (Pictures)</option>
               <option value="sports-words">Sports (Words)</option> 
             </optgroup>
-
+            
             <optgroup label="Miscellaneous">
-              <option value="sounds-fun">Sounds Fun!: p100-101</option>
-              <option value="theyre-ing-shes-ing">They're ~ing / She's ~ing</option>
+              <option value="future-with-going-to">Future With Going To</option>
               <option value="family-game-sheet">Family Game Sheet</option>
               <option value="lg6p70-71">Let's Go 6: p70-71</option>
               <option value="my-vacation">My Vacation</option>
-              <option value="so-and-because">So and Because</option>
-              <option value="future-with-going-to">Future With Going To</option>
-
+              <option value="sounds-fun">Sounds Fun!: p100-101</option>
+              <option value="theyre-ing-shes-ing">They're ~ing / She's ~ing</option>
+              <option value="what-did-emily-do">What Did Emily Do?</option>
             </optgroup>
 
           </select>
