Fix default board game.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
           <select name="board-game" id="game-select">
             <optgroup label="Week 5~7">
-              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
+              <option selected="selected" value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
               <option value="color-shapes-words">Colors & Shapes (Words)</option>
               <option value="nature-pictures">Nature (Pictures)</option>
               <option value="nature-words">Nature (Words)</option>
@@ -83,7 +83,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/school-pictures.jpg" />
+        <img id="board" src="images/color-shapes-pictures.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
