--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
-            <optgroup label="Week 12~15">
-              <option selected="selected" value="animals-pictures">Animals (Pictures)</option>
-              <option value="animals-words">Animals (Words)</option>
-              <option value="furniture-pictures">Household Objects (Pictures)</option>
-              <option value="furniture-words">Household Objects (Words)</option>
-              <option value="nature-pictures">Nature (Pictures)</option>
-              <option value="nature-words">Nature (Words)</option>
-            </optgroup>
-            
-            <optgroup label="Honeycomb Board Games">
-              <option value="verbs-1-pictures">Actions (Pictures)</option>
-              <option value="verbs-1-words">Actions (Words)</option>
-              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
-              <option value="color-shapes-words">Colors & Shapes (Words)</option>
-              <option value="food-pictures">Food (Pictures)</option>
+            <optgroup label="Week 16~19">
+              <option selected="selected" value="food-pictures">Food (Pictures)</option>
               <option value="food-words">Food (Words)</option>
               <option value="symptoms-pictures">Injuries & Illnesses (Pictures)</option>
               <option value="symptoms-words">Injuries & Illnesses (Words)</option> 
               <option value="house-rooms-pictures">Rooms (Pictures)</option>
               <option value="house-rooms-words">Rooms (Words)</option> 
+            </optgroup>
+            
+            <optgroup label="Honeycomb Board Games">
+              <option value="animals-pictures">Animals (Pictures)</option>
+              <option value="animals-words">Animals (Words)</option>
+              <option value="verbs-1-pictures">Actions (Pictures)</option>
+              <option value="verbs-1-words">Actions (Words)</option>
+              <option value="color-shapes-pictures">Colors & Shapes (Pictures)</option>
+              <option value="color-shapes-words">Colors & Shapes (Words)</option>
+              <option value="furniture-pictures">Household Objects (Pictures)</option>
+              <option value="furniture-words">Household Objects (Words)</option>
+              <option value="nature-pictures">Nature (Pictures)</option>
+              <option value="nature-words">Nature (Words)</option>
               <option value="occupations-pictures">Occupations (Pictures)</option>
               <option value="occupations-words">Occupations (Words)</option>
               <option value="school-pictures">School Supplies (Pictures)</option>
@@ -83,7 +83,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/animals-pictures.jpg" />
+        <img id="board" src="images/food-pictures.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
