an updated commit message

--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
       <div id="box">
         <nav>
           <select name="board-game" id="game-select">
-            <optgroup label="Week 6~9">
-              <option selected="selected" value="school-pictures">School Supplies (Pictures)</option>
-              <option value="school-words">School Supplies (Words)</option> 
-              <option value="career-path">Career Path Board Game</option>
-            </optgroup>
-            
+
             <optgroup label="Honeycomb Board Games">
-              <option value="animals-pictures">Animals (Pictures)</option>
+              <option selected="selected" value="animals-pictures">Animals (Pictures)</option>
               <option value="animals-words">Animals (Words)</option>
               <option value="verbs-1-pictures">Actions (Pictures)</option>
               <option value="verbs-1-words">Actions (Words)</option>
@@ -27,6 +22,8 @@
               <option value="food-words">Food (Words)</option>
               <option value="furniture-pictures">Household Objects (Pictures)</option>
               <option value="furniture-words">Household Objects (Words)</option>
+              <option value="school-pictures">School Supplies (Pictures)</option>
+              <option value="school-words">School Supplies (Words)</option> 
               <option value="symptoms-pictures">Injuries & Illnesses (Pictures)</option>
               <option value="symptoms-words">Injuries & Illnesses (Words)</option> 
               <option value="nature-pictures">Nature (Pictures)</option>
@@ -53,6 +50,7 @@
             </optgroup>
             
             <optgroup label="Miscellaneous">
+              <option value="career-path">Career Path Board Game</option>
               <option value="family-game-sheet">Family Game Sheet</option>
               <option value="future-with-going-to">Future With Going To</option>
               <option value="lg6p70-71">Let's Go 6: p70-71</option>
@@ -90,7 +88,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/school-pictures.jpg" />
+        <img id="board" src="images/animals-pictures.jpg" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
