Add lowercase board game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <nav>
           <select name="board-game" id="game-select">
             <optgroup label="Alphabet Board Games">
-              <option selected="selected" value="alphabet-upper-case.png">Alphabet: Upper Case</option>
+              <option selected="selected" value="alphabet-uppercase.png">Alphabet: Uppercase</option>
+              <option value="alphabet-lowercase.png">Alphabet: Lowercase</option>
             </optgroup>
             <optgroup label="Honeycomb Board Games">
               <option value="animals-pictures.jpg">Animals (Pictures)</option>
@@ -90,7 +91,7 @@
             </div>
           </div>
         </nav>
-        <img id="board" src="images/alphabet-upper-case.png" />
+        <img id="board" src="images/alphabet-uppercase.png" />
       </div>
       <canvas id="canvas">
         Canvas is not supported by your browser
